# mapscrapy-desktop

./: .gitignore  LICENSE  README.rst  pyproject.toml
src/MapScrapy/: __main__.py  app.py  location.pyd  mapscrapy.db  packages.py  process.py  settings.py
src/MapScrapy.dist-info/: METADATA
